--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,36 @@
 # Dependencies
-node_modules/
+/node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
-
-# Production build
-/dist
-/build
 
 # Testing
 /coverage
 
-# Environment variables
+# Production
+/build
+/frontend/build
+/dist
+/frontend/dist
+
+# Misc
+.DS_Store
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# TypeScript
+*.tsbuildinfo 
