--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "dependencies": {
+    "next": "^14.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
@@ -9,5 +14,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.6.6",
     "ts-jest": "^29.2.5"
+  },
+  "scripts": {
+    "frontend": "cd frontend && npm run dev"
   }
 }
